# github-issues-migrator-for-notion

./: .gitignore  README.md  github.py  main.py  notion.py  pyproject.toml
.github/workflows/: migrate.yml
