[tool.poetry]
name = "import-github-issues-into-notion"
version = "0.1.0"
description = ""
authors = ["Yuki Tatsunami <okojo.yt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
markdown = "^3.4.3"
click = "^8.1.3"
pytz = "^2023.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
